[gd_scene load_steps=6 format=3 uid="uid://scke8b0cr4f4"]

[ext_resource type="Script" path="res://Scripts/ObstacelController.gd" id="1_koujs"]
[ext_resource type="Texture2D" uid="uid://cocq5f8xrioqr" path="res://Sprites/ECG_Obstacles.png" id="2_83x0c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3p2sc"]
size = Vector2(690, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nyq6o"]
size = Vector2(32, 690)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fc3q"]
size = Vector2(32, 240)

[node name="Obstacle" type="Node2D"]
position = Vector2(1280, 360)
script = ExtResource("1_koujs")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(16, 1.52588e-05)
scale = Vector2(1.6, 81.6)

[node name="TopObstacleSprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.12549, 0.0862745, 1)
position = Vector2(0, -840)
texture = ExtResource("2_83x0c")
centered = false

[node name="BottomObstacleSprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.12549, 0.0862745, 1)
position = Vector2(32, 840)
rotation = 3.14159
texture = ExtResource("2_83x0c")
centered = false

[node name="ObstacleArea" type="Area2D" parent="."]
position = Vector2(16, 136)
rotation = 1.5708
monitorable = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleArea"]
position = Vector2(335, 0)
shape = SubResource("RectangleShape2D_3p2sc")

[node name="TopObstacleHit" type="CollisionShape2D" parent="ObstacleArea"]
position = Vector2(-607, 0.00219727)
rotation = -1.5708
shape = SubResource("RectangleShape2D_nyq6o")

[node name="ScorePointArea" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="ScorePointHitBox" type="CollisionShape2D" parent="ScorePointArea"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_0fc3q")
debug_color = Color(0.54902, 0.403922, 1, 0.419608)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="ObstacleArea" to="." method="_on_obstacle_area_body_entered"]
[connection signal="body_entered" from="ScorePointArea" to="." method="_on_score_point_area_body_entered"]
